# rs-hack

./: .gitignore  CHANGELOG.md  Cargo.toml  FINDINGS_SUMMARY.md  HUMAN.md  LICENSE-MIT  QUICKREF.md  QUICKSTART.md  README.md  REANALYSIS_2025-11-09.md  REANALYSIS_SUMMARY.md  REFACTORING_ANALYSIS.md  TOOLS_SUMMARY.md  rustfmt.toml
.yah/: .gitignore  CLAUDE.md
app/tauri/: Cargo.toml  README.md  install-mac.sh  tauri.conf.json
app/tauri/capabilities/: default.json
app/tauri/icons/: icon.icns
app/tauri/resources/: claude-shape-baseline.toml
app/tauri/src/: agent.rs  agent_approval.rs  agent_process.rs  agent_settings.rs  agent_tools.rs  api_keys.rs  backend.rs  claude_cli.rs  claude_shape.rs  commands.rs  event_bridge.rs  hetzner.rs  identities.rs  lib.rs  main.rs  ssh_keys.rs  state.rs  terminal.rs
app/tauri/tests/: agent_writers_e2e.rs
app/yah/desktop/: Cargo.toml  install-mac.sh  tauri.conf.json
app/yah/desktop/resources/: claude-shape-baseline.toml
app/yah/desktop/src/: agent.rs  agent_approval.rs  agent_process.rs  agent_settings.rs  agent_tools.rs  api_keys.rs  backend.rs  claude_cli.rs  claude_shape.rs  commands.rs  event_bridge.rs  hetzner.rs  identities.rs  lib.rs  main.rs  session_history.rs  ssh_keys.rs  state.rs  terminal.rs
app/yah/desktop/tests/: agent_writers_e2e.rs
crates/yah/kg-anno/: Cargo.toml
crates/yah/kg-anno-wasm/: Cargo.toml
crates/yah/kg-anno-wasm/src/: lib.rs
crates/yah/kg-anno/src/: apply.rs  index.rs  lib.rs  parser.rs
crates/yah/kg-anno/tests/: e2e.rs
crates/yah/kg-daemon/: Cargo.toml
crates/yah/kg-daemon/src/: lib.rs  service.rs  snapshot.rs  snapshot_wire.rs
crates/yah/kg-daemon/tests/: e2e.rs
crates/yah/kg-json-yaml/: Cargo.toml
crates/yah/kg-json-yaml/src/: indexer.rs  lib.rs  spans.rs  visit.rs
crates/yah/kg-json-yaml/tests/: index_then_query.rs
crates/yah/kg-store/: Cargo.toml
crates/yah/kg-store/src/: lib.rs  resolve.rs  sink.rs  snapshot.rs  store.rs  walker.rs
crates/yah/kg-store/tests/: imports_resolver.rs  walker_e2e.rs
crates/yah/kg-ts/: Cargo.toml
crates/yah/kg-ts/src/: indexer.rs  visit.rs
crates/yah/kg-ts/tests/: calls_resolution.rs  dogfood_yah_ui.rs  imports_resolver.rs  index_then_query.rs  tsdoc_extraction.rs
crates/yah/kg-validator/: Cargo.toml
crates/yah/kg-validator/src/: engine.rs  lib.rs  parse.rs  rule.rs  selector.rs  violation.rs
crates/yah/kg-validator/tests/: engine.rs
crates/yah/lsp/: Cargo.toml
crates/yah/lsp/src/: framing.rs  language.rs  lib.rs  pool.rs  server.rs
crates/yah/rpc/: Cargo.toml
crates/yah/rpc/src/: lib.rs
crates/yah/runner/: Cargo.toml
crates/yah/runner/examples/: hok_smoke.rs
crates/yah/runner/src/: lib.rs  openai_compat.rs  runner.rs  session.rs  session_id.rs  sink.rs  tool.rs
crates/yah/runner/tests/: openai_compat_e2e.rs
examples/: sample.rs
hack-board/: README.md  package.json  todo.md  tsconfig.json
mcp-example/: .gitignore  CONFIGURATION.md  EXAMPLES.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  pyproject.toml  server.py  test_server.py
mcp-server/: .gitignore  CONFIGURATION.md  EXAMPLES.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  pyproject.toml  server.py  test_basic.py
mcp-server-rs/: Cargo.toml  LICENSE  README.md
mcp-server-rs/src/mcp/: mod.rs  server.rs  tools.rs
rs-hack/: Cargo.toml  integration_test.sh
rs-hack-arch/: Cargo.toml
rs-hack-arch/examples/: test_nt_alt.rs  test_trace.rs
rs-hack-arch/src/: annotation.rs  archive.rs  extract.rs  graph.rs  lib.rs  mcp.rs  promote.rs  query.rs  schema.rs  sdlc.rs  smell.rs  status.rs  summary.rs  ticket.rs  validate.rs
rs-hack-arch/tests/: dogfood.rs  non_rust_extract.rs
rs-hack-mcp/: Cargo.toml
rs-hack-mcp/src/: main.rs
rs-hack-mcp/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
rs-hack/examples/: sample.rs
rs-hack/src/: diff.rs  editor.rs  execute.rs  files.rs  lib.rs  main.rs  operations.rs  path_resolver.rs  state.rs  surgical.rs  tests.rs  visitor.rs
rs-hack/src/commands/: doc_coverage.rs  find.rs  match_audit.rs  mod.rs  neighbors.rs  summary.rs
rs-hack/tests/: integration_test.sh
rshack/: Cargo.toml
rshack/src/: main.rs
src/: diff.rs  editor.rs  lib.rs  main.rs  operations.rs  state.rs  surgical.rs  tests.rs  (+1 more)
yah/: Cargo.toml  integration_test.sh
yah-kg-anno/: Cargo.toml
yah-kg-anno-wasm/: Cargo.toml
yah-kg-anno-wasm/src/: lib.rs
yah-kg-anno/src/: apply.rs  index.rs  lib.rs  parser.rs
yah-kg-anno/tests/: e2e.rs
yah-kg-daemon/: Cargo.toml
yah-kg-daemon/src/: lib.rs  path.rs  service.rs  snapshot.rs  snapshot_wire.rs  watcher.rs
yah-kg-daemon/tests/: e2e.rs
yah-kg-json-yaml/: Cargo.toml
yah-kg-json-yaml/src/: indexer.rs  lib.rs  spans.rs  visit.rs
yah-kg-json-yaml/tests/: index_then_query.rs
yah-kg-rust/: Cargo.toml
yah-kg-rust/src/: indexer.rs  lib.rs  visit.rs
yah-kg-rust/tests/: calls_resolution.rs  index_then_query.rs
yah-kg-store/: Cargo.toml
yah-kg-store/src/: lib.rs  resolve.rs  sink.rs  snapshot.rs  store.rs  walker.rs
yah-kg-store/tests/: imports_resolver.rs  walker_e2e.rs
yah-kg-ts/: Cargo.toml
yah-kg-ts/src/: indexer.rs  lib.rs  visit.rs
yah-kg-ts/tests/: calls_resolution.rs  dogfood_yah_ui.rs  imports_resolver.rs  index_then_query.rs  tsdoc_extraction.rs
yah-kg-validator/: Cargo.toml
yah-kg-validator/src/: engine.rs  lib.rs  parse.rs  selector.rs  violation.rs
yah-kg-validator/tests/: engine.rs
yah-rpc-ssh/: Cargo.toml
yah-rpc-ssh/src/: client.rs  lib.rs  session.rs
yah/examples/: add-timestamps.json  arch_test_trace.rs  expand-enums.json
yah/src/: diff.rs  editor.rs  keys.rs  lib.rs  main.rs  operations.rs  path_resolver.rs  serve.rs  state.rs  surgical.rs  worktrees.rs
yah/src/arch/: annotation.rs  archive.rs  comment.rs  extract.rs  graph.rs  mcp.rs  mod.rs  promote.rs  query.rs  sdlc.rs  smell.rs  status.rs  summary.rs  ticket.rs  validate.rs
yah/src/mcp/: mod.rs  protocol.rs  tools.rs
yah/templates/claude-skills/: yah.md
yah/templates/commands/: comment.md  handoff.md  refine.md
yah/tests/: arch_dogfood.rs  arch_non_rust_extract.rs
(+203 files in other folders)
