# @yah:ticket(R020-T1, "Trim workspace.metadata.arch.layers; replace with legal tag namespaces")
# @yah:assignee(agent:claude)
# @yah:status(review)
# @yah:phase(P3)
# @yah:parent(R020)
# @yah:next("Annotations replaced the layer/role mechanism — keep only what the validator actually consumes")
# @yah:next("[workspace.metadata.arch.tag_namespaces] declares legal @yah:tag(...) namespaces")
#
# @yah:ticket(R020-T2, "Move non-exe Rust → crates/, TS libs → packages/")
# @yah:status(open)
# @yah:phase(P3)
# @yah:parent(R020)
# @yah:next("Mechanical: yah-kg, yah-kg-store, yah-kg-rust, yah-kg-ts, yah-kg-anno, yah-kg-daemon → crates/")
# @yah:next("yah-ui can stay top-level or move to packages/yah-ui")
# @yah:next("Update Cargo.toml workspace.members + any path = entries")
# @yah:next("Do this once before the codebase grows further (user's call)")

[workspace]
members = [
    "yah",
    "yah-kg",
    "yah-kg-store",
    "yah-kg-rust",
    "yah-kg-ts",
    "yah-kg-json-yaml",
    "yah-kg-daemon",
    "yah-kg-anno",
    "yah-kg-validator",
    "app/tauri",
]
# `app/tauri` requires libwebkit2gtk-4.1 on Linux; default-members keeps
# `cargo build --workspace` and `cargo test --workspace` working on hosts
# without webkit. Build the Tauri app explicitly with `cargo build -p yah-tauri`.
default-members = [
    "yah",
    "yah-kg",
    "yah-kg-store",
    "yah-kg-rust",
    "yah-kg-ts",
    "yah-kg-json-yaml",
    "yah-kg-daemon",
    "yah-kg-anno",
    "yah-kg-validator",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["Leif Shackelford <structuresound@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1e1f/yah"

[workspace.metadata.arch]

# yah-kg-validator vocabulary v1. The validator does not currently consult
# this section at runtime — it's documentation for authors writing
# `@yah:rule(...)` directives. Rule kinds outside this list still trigger
# an "unknown rule kind" violation; tag namespaces outside `tag_namespaces`
# parse fine but `must-tag` rules against them will simply never resolve
# any descendants.
[workspace.metadata.arch.rule_vocabulary]
no-import-of    = "Annotated subtree must not have outgoing `Imports` edges to any node in the selector set."
no-dependency-on = "Annotated subtree must not depend on the selector set via Imports/Calls/References/Implements/Extends/ReExports/Bounds/ImplFor."
max-depth        = "Annotated subtree must not nest deeper than N hops via Contains."
must-tag         = "Every non-synthetic node in the annotated subtree must carry — or inherit via a Contains ancestor — at least one tag in the named namespace."

# Selector grammar: tag(name) | tag(ns:name) | ns(namespace) |
# node(qualified::name) | kind(common::module). See yah-kg-validator/src/lib.rs.

[workspace.metadata.arch.tag_namespaces]
layer = "Logical layer the node belongs to (e.g. layer:kg, layer:kg_store, layer:cli)."
role  = "Function the node performs within its layer (e.g. role:schema, role:graph, role:validate)."

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true