[project]
name = "rs-hack-mcp"
version = "0.1.0"
description = "MCP server for rs-hack - AST-aware Rust refactoring tools"
requires-python = ">=3.10"
authors = [
    {name = "Leif Shackelford", email = "structuresound@gmail.com"}
]
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
keywords = ["mcp", "rust", "refactoring", "ast", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/1e1f/rs-hack"
Documentation = "https://github.com/1e1f/rs-hack/tree/main/mcp-server"
Repository = "https://github.com/1e1f/rs-hack"
Issues = "https://github.com/1e1f/rs-hack/issues"

[project.scripts]
rs-hack-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
