[package]
name = "rs-hack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AST-aware Rust refactoring tool for AI agents - transform, rename, inspect & more"
keywords = ["ast", "refactoring", "code-generation", "ai", "automation"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
default-run = "rs-hack"

[lib]
name = "rs_hack"
path = "src/lib.rs"

[[bin]]
name = "rs-hack"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
prettyplease = "0.2"
glob = "0.3"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
similar = "2.3"
strsim = "0.11"

[dev-dependencies]
tempfile = "3.23"
