[package]
name = "yah-kg-json-yaml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON / YAML config-file indexer for the yah knowledge graph"
publish = false

[dependencies]
yah-kg = { path = "../yah-kg" }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
yaml-rust2 = "0.10"
tree-sitter = "0.23"
tree-sitter-json = "0.24"

[dev-dependencies]
yah-kg-store = { path = "../yah-kg-store" }
