[package]
name = "yah-kg-ts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript / TSX language indexer for the yah knowledge graph"

[dependencies]
yah-kg = { path = "../yah-kg" }
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
yah-kg-store = { path = "../yah-kg-store" }
tempfile = "3.0"
