[package]
name = "yah-kg-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Architecture rule validator over the yah knowledge graph"
publish = false

[dependencies]
yah-kg = { path = "../yah-kg" }
yah-kg-store = { path = "../yah-kg-store" }
yah-kg-anno = { path = "../yah-kg-anno" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
