[package]
name = "yah"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "yah — AI-agent harness: source-embedded tickets, AST refactoring, architecture graph, MCP"
keywords = ["ai", "refactoring", "ast", "agent", "mcp"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
default-run = "yah"

[lib]
name = "yah"
path = "src/lib.rs"

[[bin]]
name = "yah"
path = "src/main.rs"

[dependencies]
# AST parsing
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
    "parsing",
] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
prettyplease = "0.2"

# CLI + serde
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# File traversal + matching
walkdir = "2.5"
glob = "0.3"

# Hashing + diff + fuzzy
blake3 = "1.8"
similar = "2.3"
strsim = "0.11"

# Time + paths
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Arch graph storage + cargo metadata
petgraph = "0.6"
cargo_metadata = "0.18"

# MCP server (stdio JSON-RPC)
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"
