[package]
name = "desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri host for the yah desktop app — wraps kg-daemon and exposes the arch.* surface as Tauri commands"
publish = false

[lib]
name = "desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kg = { path = "../../../crates/yah/kg" }
rpc = { path = "../../../crates/yah/rpc" }
kg-daemon = { path = "../../../crates/yah/kg-daemon" }
kg-store = { path = "../../../crates/yah/kg-store" }
kg-rust = { path = "../../../crates/yah/kg-rust" }
kg-ts = { path = "../../../crates/yah/kg-ts" }
kg-json-yaml = { path = "../../../crates/yah/kg-json-yaml" }
runner = { path = "../../../crates/yah/runner" }
# SSH-RPC transport for remote rigs (R019-F3). RigBackend::Remote dispatches
# every arch_* command through SshRpcClient over a persistent SSH session.
rpc-ssh = { path = "../../../crates/yah/rpc-ssh" }

tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "process"] }
thiserror = "1.0"
tracing = "0.1"
# Subscriber so tracing::warn!/error! events from agent.rs / state.rs / etc.
# actually reach the terminal when the binary is launched from a shell.
# `env-filter` lights up `RUST_LOG=yah_tauri=debug,yah_runner=debug` etc;
# default filter (set in lib.rs::run) is info-level so a clean dev run
# stays quiet but agent errors still surface.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1.5"
# OS-keychain credential storage (R027-F3). Apple Keychain on macOS,
# Credential Manager on Windows, libsecret/dbus on Linux. crypto-rust
# pulls in pure-Rust AES — avoids dragging openssl into the Linux build.
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
# Hetzner Cloud HTTP client (R027-F6). rustls-tls keeps the dependency
# graph openssl-free, matching the keyring stack above; json pulls in
# serde_json wiring for response parsing.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Async stream adaptors — used by the agent runtime (R028-F3) to fold
# reqwest's `bytes_stream()` into SSE event chunks.
futures-util = "0.3"
# SSH key file format encode/decode + ed25519 keygen for R029 provision
# flow. `getrandom` lights up OsRng-backed `PrivateKey::random()`. No
# openssl dep — matches the rest of the keyring stack.
ssh-key = { version = "0.6", features = ["ed25519", "getrandom"] }
# Pure-rust SSH client for the in-app terminal (R030). Brings its own
# rustls / ed25519 / aes-gcm — same openssl-free stance as the rest of
# the dep graph. `russh::keys` does the private-key parsing on auth.
russh = "0.51"
# Cross-platform PTY spawn for the local terminal mode (R030-T6) — used
# to isolate xterm.js renderer issues from remote-shell quirks. macOS
# uses BSD ptys, Linux uses pty/ptmx, Windows uses ConPTY. Blocking I/O
# only; we bridge to the async event pump via spawn_blocking.
portable-pty = "0.8"
# Base64 for streaming PTY bytes through Tauri events. `Vec<u8>` in
# serde_json blows up to a number-per-byte array, so we encode at the
# IPC seam instead.
base64 = "0.22"
# `async-trait` is needed for the russh client::Handler impl.
async-trait = "0.1"
# Read-only agent tools (R031-F1): walkdir + glob enumerate rig files
# under the sandbox; regex backs the `grep` tool's pattern matching.
# All three are pure-Rust (no openssl), matching the rest of the dep
# graph. We bound output sizes inside the tools so a misbehaving model
# can't pull arbitrary chunks of the workspace into context.
walkdir = "2"
glob = "0.3"
regex = "1"
# Pinned-shape loader for `crab` (HAo) — parses the embedded
# claude-shape-*.toml audit artifact at boot. See
# .yah/arch/authored/yah-claude-shape-capture.md.
toml = "0.8"

[dev-dependencies]
# `agent_tools` tests need a sandbox dir per case so the canonicalize-
# prefix check exercises real paths rather than mocks.
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[features]
# Empty by default; consumers add platform features as needed.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
