[package]
name = "kg-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "In-memory knowledge-graph store backing the yah daemon's arch.* RPCs"
publish = false

[dependencies]
kg = { path = "../kg" }
rpc = { path = "../rpc" }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"
kg-rust = { path = "../kg-rust" }
