[package]
name = "rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport-agnostic RPC contract types for the yah daemon's `arch.*` / `file.*` / `dir.*` surface"
publish = false

[dependencies]
kg = { path = "../kg" }

serde = { version = "1.0", features = ["derive"] }
